# vk-schema-codegen

./: .editorconfig  .gitignore  .gitmodules  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: coverage.yaml  linters.yaml  tests.yaml
requirements/: requirements-dev.txt  requirements.txt
src/: __main__.py  cli.py
src/cli/: cli.py  config.py
src/codegen/: __init__.py  methods.py  objects.py  responses.py  types.py
src/fields/: __init__.py  array.py  base.py  boolean.py  dict.py  fields.py  float.py  integer.py  integer_enum.py  one_of.py  pattern.py  reference.py  string.py  string_enum.py  union.py
src/parsers/: __init__.py
src/properties/: __init__.py  array.py  base.py  boolean.py  dict.py  float.py  from_dict.py  integer.py  integer_enum.py  one_of.py  pattern.py  properties.py  reference.py  string.py  string_enum.py  union.py
src/references/: __init__.py  from_string.py  order_validator.py  parser.py
src/schemas/: __init__.py  all_of.py  array.py  base.py  bool.py  enum.py  method.py  object.py  one_of.py  reference.py  response.py
src/strings/: __init__.py  converter.py  reference.py  regexp.py  types.py  validators.py
tests/test_cli/: test_cli.py  test_config.py
tests/test_codegen/: test_objects.py  test_responses.py
tests/test_fields/: test_array.py  test_base.py  test_boolean.py  test_dict.py  test_fields.py  test_float.py  test_integer.py  test_integer_enum.py  test_one_of.py  test_pattern_properties.py  test_reference.py  test_string.py  test_string_enum.py  test_union.py
tests/test_properties/: test_array.py  test_base.py  test_boolean.py  test_dict.py  test_float.py  test_from_dict.py  test_integer.py  test_integer_enum.py  test_one_of.py  test_pattern_properties.py  test_properties.py  test_reference.py  test_string.py  test_string_enum.py  test_union.py
tests/test_references/: test_from_string.py  test_order_validator.py  test_parser.py
tests/test_schemas/: test_all_of.py  test_array.py  (+7 more)
(+57 files in other folders)
