[tool.poetry]
name = "SchemaVKCodegen"
version = "1.0.0"
description = "Code generator for schema of VK API"
authors = ["ZeN <artaganmalsagov07@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
black = "^22.10.0"
flake8 = "^6.0.0"
isort = "^5.10.1"
mypy = "^0.911"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
