[tool.poetry]
name = "vk-schema-codegen"
version = "1.0.0a2"
description = "Code generator for schema of VK API"
authors = ["ZeN <artaganmalsagov07@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.3"
msgspec = "^0.10.1"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"
black = "^22.12.0"
flake8 = "^5.0.4"
isort = "^5.11.4"
mypy = "^0.991"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 88

[tool.black]
line-length = 99
target-version = ['py38', 'py39', 'py310']
